overflow fix nav

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -28,9 +28,12 @@ $color-yellow-200: rgba(255,225,189,1);
 }
 
 /* Center body and fix to minimum width */
+
+
 body {
   overflow-x: hidden;
   overflow-y: scroll;
+  position: relative;
 }
 
 main {
