--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -11,6 +11,7 @@ header {
   position: absolute; 
   top: 0;
   width: 100%; 
+
  
 
 
@@ -56,7 +57,6 @@ header {
       display: flex;
       margin: 0;
       width: fit-content ;
-
     }
   
     li {
@@ -148,13 +148,14 @@ header {
     }
 
     .pages__list {
+      
       opacity: 0;
       position: absolute;
       top: 0px;
-      right: -100vw;
+      right: 0px;
       flex-direction: column;
       background-color: $color-green-primary;
-      width: 50%;
+      width: 0%;
       text-align: right;
       transition: 0.3s;
       z-index: -1;
@@ -164,19 +165,21 @@ header {
       padding-top: 6rem;
       transition: 350ms ease;
       height: 100vh;
+  
 
       li {
         margin: 1rem 0;
       }
     }
 
-
     .pages__list.active1 {
       position: absolute;
+      width: 50%;
       top: 0px;
       right: 0px;
       z-index: 0;
       opacity: .85;
+      
 
     }
   }
